# CODD

./: .gitignore  CMakeLists.txt  README.md  README.org  color_exp1  color_exp2  comp  comp2  exp1  exp2  exp3  exp4  foo.cpp  gen.ipynb
data/atsp/: ftv33_10.atsp
data/coloring/: 1-FullIns_3.py  1-FullIns_4.py  1-FullIns_5.py  1-Insertions_4.py  1-Insertions_5.py  1-Insertions_6.py  2-FullIns_3.py  2-FullIns_4.py  2-FullIns_5.py  2-Insertions_3.py  2-Insertions_4.py  2-Insertions_5.py  3-FullIns_3.py  3-FullIns_4.py  3-FullIns_5.py  3-Insertions_3.py  3-Insertions_4.py  3-Insertions_5.py  4-FullIns_3.py  4-FullIns_4.py  4-FullIns_5.py  4-Insertions_3.py  4-Insertions_4.py  5-FullIns_3.py  5-FullIns_4.py  DSJC1000.1.py  DSJC1000.5.py  DSJC125.1.py  DSJC125.5.py  DSJC125.9.py  DSJC250.1.py  DSJC250.5.py  DSJC250.9.py  DSJC500.1.py  DSJC500.5.py  DSJC500.9.py  DSJR500.1.py  DSJR500.1c.py  DSJR500.5.py  abb313GPIA.py  (+91 more)
data/coloring/PyDIMACS/: convert_instances
data/knapsack/: breaksRF  breaksRF2  easy  easy2  easy4
data/tsptw/toy/: toy1.tw  toy2.tw
doc/: C++DDOpt.html  C++DDOpt.org  C++DDOpt.tex  CODD.html  CODD.org  code.inc  demo.org  setup.config
examples/: coloring.cpp  coloring2.cpp  coloring2RF.cpp  coloring2_lag.cpp  coloring3.cpp  coloringtoy.cpp  foo.cpp  gruler.cpp  gruler_mid.cpp  gruler_midlb.cpp  knapsack.cpp  knapsack1.cpp  knapsack2.cpp  knapsackR.cpp  knapsackRF.cpp  misp.cpp  misp2.cpp  misp3.cpp  misp4.cpp  misp4_lag.cpp  misp5.cpp  misp5RF.cpp  ordered.cpp  testing.cpp  tsp.cpp  tsp_test.cpp  tsp_test2.cpp  tsp_test3.cpp  tsp_test4.cpp  tsptoy.cpp  tsptoy2.cpp  tsptw.cpp  tsptw2.cpp  tsptwRF.cpp  tsptw_old.cpp
experiments/: runner.zsh
src/: .#hashtable.hpp  RuntimeMonitor.cpp  RuntimeMonitor.hpp  codd.hpp  dd.cpp  dd.hpp  handle.hpp  hashtable.hpp  heap.hpp  lighthash.hpp  msort.hpp  node.cpp  node.hpp  pool.cpp  pool.hpp  queue.hpp  search.cpp  search.hpp  searchRestrictedFirst.cpp  searchRestrictedFirst.hpp  searchRestrictedOnly.cpp  searchRestrictedOnly.hpp  stlAllocAdapter.hpp  store.cpp  store.hpp  uf.hpp  util.cpp  util.hpp  vec.hpp
test/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
